--- a/config.ini
+++ b/config.ini
@@ -28,10 +28,10 @@ group.id=update_demo_monitor
 [navigate_glonas]
 group.id=update_demo_navigate_glonas
 
-[navgate_inertional]
+[navigate_inertional]
 group.id=update_demo_navgate_inertional
 
-[navgate_gps]
+[navigate_gps]
 group.id=update_demo_navgate_gps
 
 [sprayer]
